sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/EmptyElseBody.sand
pub class EmptyElseBody {
    foo() {
        (
            if cond {
                x
            } else {
                
            }
        )
    }
}